--- a/layout.css
+++ b/layout.css
@@ -7,9 +7,12 @@
     align-items: center;
     flex-direction: row;
     margin: auto auto;
-    gap: 3.5rem;
+    gap: 3rem;
     height: 2rem;
     order: 0;
+    > li {
+      font-size: 12px;
+    }
   }
   .hamburger-icon {
     display: none;
