--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ button {
 }
 nav {
   display: grid;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: 1fr 3fr;
   padding: 0.5rem 5%;
   justify-content: space-between;
   > img {
@@ -27,6 +27,7 @@ nav {
   }
   > div {
     display: flex;
+    justify-content: flex-end;
     margin: auto 0;
     > button {
       padding: 0.5rem 1.2rem 0.5rem 2rem;
@@ -39,12 +40,17 @@ nav {
 ol.navigation {
   display: flex;
   flex-direction: row;
-  gap: 2rem;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  column-gap: 2rem;
+  row-gap: -1rem;
   margin: 0;
   padding: 0;
+  max-height: 10rem;
   order: 2;
+  grid-column: 2;
   > li {
-    font-size: 12px;
+    font-size: 10px;
     color: var(--secondary-color);
     cursor: pointer;
   }
@@ -303,5 +309,13 @@ ul {
   font-weight: 300;
   > li {
     margin: 0.1rem 0;
+  }
+}
+#socials {
+  display: flex;
+  gap: 0.4rem;
+  > li img {
+    width: 1rem;
+    cursor: pointer;
   }
 }
